# finwizard-estate

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md
deploy/helm/property-service/: Chart.yaml  values-dev.yaml  values-production.yaml  values-staging.yaml  values.yaml
docker/: Dockerfile  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  init-db.sql
docs/architecture/: 01-domain-model.md  02-folder-structure.md  03-database-design.md  04-entity-relationship-diagram.md  05-api-contract.md  06-event-definitions.md  07-service-responsibilities.md  08-repository-interfaces.md  09-dto-design.md  10-validation-rules.md  11-error-handling-strategy.md  12-security-strategy.md  13-cache-strategy.md  14-background-jobs.md  15-deployment-strategy.md  16-docker-structure.md  17-dependency-graph.md  18-development-roadmap.md  README.md
docs/consumers/: README.md
frontend/: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useAnalysis.ts  useInventoryAnalysis.ts  useProperties.ts
frontend/src/lib/: design-system.ts  motion.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_postgis.py  003_seed_lookups.py
scripts/: generate_openapi.py  normalize_konut_envanter.py  roadmap_status.py  seed_demo_properties.py  seed_property_types.py
src/property_service/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/performance/: test_search_benchmark.py
(+326 files in other folders)
